--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "m5stickc-idf"]
+[submodule "src/components/m5stickc-idf"]
 	path = src/components/m5stickc-idf
 	url = https://github.com/teuteuguy/m5stickc-idf
 	branch = test-tim
