--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "m5stickc/aws_demos/application_code/components/m5stickc-idf"]
 	path = m5stickc/aws_demos/application_code/components/m5stickc-idf
 	url = https://github.com/teuteuguy/m5stickc-idf
+[submodule "amazon-freertos"]
+	path = amazon-freertos
+	url = https://github.com/aws/amazon-freertos
