--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,11 +1,17 @@
 theme: jekyll-theme-minimal
 
+port: 4200
+
 language: english
 
-title: Amazon FreeRTOS workshop on M5StickC
+title: Amazon FreeRTOS Workshop
 
-description: Workshop content for running Amazon FreeRTOS on the M5StickC
+description: Amazon Freertos workshop using the M5 StickC
 
 logo: https://upload.wikimedia.org/wikipedia/commons/thumb/9/93/Amazon_Web_Services_Logo.svg/1280px-Amazon_Web_Services_Logo.svg.png
 
-favicon: page/assets/favicon.ico
+favicon: ./assets/favicon.ico
+
+author: teuteuguy
+
+# show_downloads: true
